[workspace]
resolver = "2"

members = [
    "core", 
    "std",
    "ts/sdk",
]

[workspace.package]
edition = "2021"
license-file = "LICENSE"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
borsh = { version = "^1", default-features = false }
bs58-fixed = { git = "https://github.com/igneous-labs/bs58-fixed.git", branch = "master", default-features = false }
bs58-fixed-wasm = { git = "https://github.com/igneous-labs/bs58-fixed.git", branch = "master", default-features = false }
const-crypto = { version = "^0.3.0", default-features = false }
ed25519-compact = { version = "^2", default-features = false }
generic-array-struct = { version = "^0.3.1-bc", default-features = false }
hmac-sha256 = { version = "^1", default-features = false }
sanctum-fee-ratio = { version = "^2", default-features = false }
sanctum-u64-ratio = { version = "^2", default-features = false }
serde = { version = "1.0", default-features = false }
serde_bytes = { version = "^0.11", default-features = false }
tsify-next = { version = "^0.5.5", default-features = false }
wasm-bindgen = { version = "^0.2", default-features = false }

# sanctum sdks
sanctum-marinade-liquid-staking-core = { git = "https://github.com/igneous-labs/sanctum-marinade-liquid-staking-sdk.git", branch = "main", default-features = false }
sanctum-reserve-core = { git = "https://github.com/igneous-labs/sanctum-reserve-sdk.git", branch = "master", default-features = false }
sanctum-spl-stake-pool-core = { git = "https://github.com/igneous-labs/sanctum-spl-stake-pool-sdk.git",  branch = "master", default-features = false }
solido-legacy-core = { git = "https://github.com/igneous-labs/solido-legacy-sdk.git", branch = "master", default-features = false }

# workspace members
sanctum-router-core = { path = "core", default-features = false }
sanctum-router-std = { path = "std", default-features = false }
