[package]
name = "sanctum-router-core"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

[features]
default = []
serde = ["dep:serde"]
std = ["dep:borsh", "borsh?/std", "serde?/std"]
wasm = ["std", "serde", "dep:tsify-next", "dep:wasm-bindgen"]

[dependencies]
const-crypto = { workspace = true }
generic-array-struct = { workspace = true }
sanctum-fee-ratio = { workspace = true }
sanctum-marinade-liquid-staking-core = { workspace = true }
sanctum-reserve-core = { workspace = true }
sanctum-spl-stake-pool-core = { workspace = true }
sanctum-u64-ratio = { workspace = true }
solido-legacy-core = { workspace = true }

# optional
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
tsify-next = { workspace = true, default-features = false, features = ["js"] , optional = true }
wasm-bindgen = { workspace = true, optional = true }

# The only reason why we have this dep is so that we can activate borsh's
# `std` feature flag for borsh io errors to implement `std::error::Error`.
# We do not use borsh for anything in this crate
borsh = { workspace = true, optional = true }
