[package]
name = "sanctum-router-std"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true

# passthrough to sanctum-router-core
[features]
default = []
serde = ["sanctum-router-core/serde"]
std = ["sanctum-router-core/std"]
wasm = ["sanctum-router-core/wasm"]

[dependencies]
sanctum-router-core = { workspace = true, default-features = false }
