[package]
name = "sanctum-router" # npm package name without @sanctumso/ scope
version = "0.0.1-dev-9" # npm package version
license = "Apache-2.0"  # dont use license-file bec wasm-pack doesnt work properly with it
publish = false         # this gets published to npm, not crates.io
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
bs58-fixed = { workspace = true }
bs58-fixed-wasm = { workspace = true, features = ["js"] }
ed25519-compact = { workspace = true }
hmac-sha256 = { workspace = true }
sanctum-router-std = { workspace = true , features = ["wasm"] }
serde = { workspace = true }
serde_bytes = { workspace = true, features = ["alloc"] }
tsify-next = { workspace = true, features = ["js"] }
wasm-bindgen = { workspace = true }
